save progress on trying to use fetch api

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,7 @@
 JWT_SECRET=jeson web token sikret
+
+DB_HOST=db.bit.io
+DB_PORT=5432
+DB_NAME=pieter/online_cinema
+DB_USER=pieter
+DB_PASS=v2_3vnub_Ji6p2CPHwc24XEwaYg4J9dX
