--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "cpp401",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server/index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "db": "powershell ./backup-db.ps1"
+    "start": "nodemon server/index.js",
+    "db": "powershell ./server/backup-db.ps1"
   },
   "author": "",
   "license": "ISC",
